--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,7 +7,11 @@ security:
 
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: mail
+        # users_in_memory: { memory: null }
 
     firewalls:
         # API protégée
@@ -23,7 +27,7 @@ security:
 
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
 
             # Activate different ways to authenticate:
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -34,7 +38,6 @@ security:
     # Note: Only the *first* matching rule is applied
     access_control:
         - { path: ^/api/v1/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api/v1/signin, roles: PUBLIC_ACCESS }
         - { path: ^/api/v1, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
